Subiendo ultimos cambios, ventana perfil hecha, validaciones